fixtures/type_errors/application_of_non_function.tl
foo : Int {
  1
}

bar : Int { foo 2 }
